[gd_scene load_steps=6 format=2]

[ext_resource path="res://5 - Hazards/Mouse_Left.png" type="Texture" id=1]
[ext_resource path="res://Prefabs/Baerat/Baerat.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9.5, 7.625 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 11.0
height = 6.0

[sub_resource type="CircleShape2D" id=3]
radius = 251.008

[node name="Baerat" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 1, 0.0745098, 0.0745098, 1 )
scale = Vector2( 0.1875, 0.1875 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.5, 0.375 )
shape = SubResource( 1 )

[node name="Hitbox" type="Area2D" parent="." groups=["Sword"]]
visible = false
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, -3 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
modulate = Color( 0.635294, 0.0235294, 0.0235294, 0.560784 )
shape = SubResource( 3 )

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_PlayerDetection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_PlayerDetection_body_exited"]
